have some changes

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+
+
+REFRESH_SECRET=
+REFRESH_TOKEN_EXPIRES= # ex: 2d
+JWT_SECRET_EXPIRES=   #ew360s
+NODE_ENV=development
