--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.5.2",
     "@strapi/strapi": "4.5.2",
     "better-sqlite3": "7.4.6",
+    "mysql": "^2.18.1",
     "pg": "^8.9.0"
   },
   "author": {
