setup .env.example for mysql

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@ REFRESH_SECRET=
 REFRESH_TOKEN_EXPIRES= # ex: 2d
 JWT_SECRET_EXPIRES=   #ew360s
 NODE_ENV=development
+
+
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
